fixing header on mobile

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -224,8 +224,6 @@ nav.main-nav a.cta {
 @media (max-width: 700px) {
   nav.main-nav {
       padding: 20px 10px 0 0;
-      background: #fff;
-      background: rgba(255, 255, 255, .90);
       margin: 0 auto;
       text-align: right;
       z-index: 100;
@@ -234,7 +232,7 @@ nav.main-nav a.cta {
       top: 8px;
       right: 6px;
       padding: 8px 8px;
-      color: #5badf0;
+      color: #711423;
       font-size: 13px;
       line-height: 1.35;
       border-radius: 3px;
